Removal + refactor
Removal of unused interfaces and refactoring